# TNM096labs

./: .gitignore  CMakeLists.txt  README.md
Lab1/: CMakeLists.txt  a_star.cpp
Lab2/: CMakeLists.txt  scheduler.cpp
Lab2/PythonTasks/: queensCSP.py  queensS.py  sudoku.py
Lab3/: App.java
Lab3/CNF/: Clause.java  InferenceEngine.java
Lab3/WumpusWorld/: MyAgent.java  notes.md
Lab3/WumpusWorld/CNF/: Clause.java  InferenceEngine.java
Lab4/: blocks.pl  pop.pl  shakey.pl  shopping.pl  strips.pl  tv.pl
Lab5/: launch_bayes.bat  mary.xml  mary_decision.xml  students.xml
